@@ -8,6 +8,7 @@
 - added: `F.stats.response.errorBuilder` with count of sent ErrorBuilders
 - added: `F.stats.response.image` with count of processed images via GM or IM
 - added: `F.stats.request.schema` with count of request to SchemaBuilder
+- added: `String.prototype.parseTerminal = function(fn(values, index, count), [skipLines])`
 
 - updated: new error message `The field "@" is invalid.`
 - updated: `NOSQL().insert(doc, [unique])`
